k8s/applications/media/arr/lidarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: arr
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: lidarr
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media,tmp,run
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: lidarr
          image: ghcr.io/vegops/lidarr:3.1.0.4875-r1@sha256:572be7875f8b43e045470fb9d1c5ef43decaca28e2a0d7e4f1f7cb87ffdea39c
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /lidarr/data
            - name: media
              mountPath: /data
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8686
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8686
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "ceph-block"
        resources:
          requests:
            storage: 4Gi
