k8s/applications/media/arr/lidarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: lidarr-web
      port: 80
      targetPort: http
