k8s/applications/media/arr/lidarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: arr
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - lidarr.eudald.gr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lidarr
      port: 80
